TAG-1136 Tilgangstyring Lonnstilskudd (#148)
* Laget egen org-klasse for arbeidsgiver med tilgangstype

* lagt til sjekking mot lonnstilskudd

* tester for tilgangstyper